--- a/packages/service/recovery-runner/tsconfig.json
+++ b/packages/service/recovery-runner/tsconfig.json
@@ -40,6 +40,9 @@
       "path": "./../../service/recovery-plan-orchestrator/tsconfig.json"
     },
     {
+      "path": "./../../service/recovery-coordination-orchestrator/tsconfig.json"
+    },
+    {
       "path": "./../../shared/result/tsconfig.json"
     }
   ]
