--- a/packages/domain/recovery-coordination/package.json
+++ b/packages/domain/recovery-coordination/package.json
@@ -17,6 +17,7 @@
     "@domain/recovery-orchestration": "workspace:*",
     "@domain/recovery-policy": "workspace:*",
     "@shared/result": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "zod": "^3.24.0"
   }
 }
