--- a/packages/data/recovery-readiness-store/package.json
+++ b/packages/data/recovery-readiness-store/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@domain/recovery-readiness": "workspace:*",
+    "@shared/result": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "@aws-sdk/client-s3": "^3.900.0",
     "zod": "^3.24.0"
   }
