--- a/packages/data/recovery-readiness-store/tsconfig.json
+++ b/packages/data/recovery-readiness-store/tsconfig.json
@@ -11,6 +11,12 @@
   "references": [
     {
       "path": "./../../domain/recovery-readiness/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/result/tsconfig.json"
     }
   ]
 }
