--- a/packages/domain/recovery-readiness/package.json
+++ b/packages/domain/recovery-readiness/package.json
@@ -14,6 +14,8 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@shared/core": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "zod": "^3.24.0"
   }
 }
