refactor: rename listByTenant to listPlansByTenant in orchestrator and planner refactor: update sorting logic in planner to use spread operator refactor: enhance type safety in helpers by using CoordinationRunId and CoordinationCorrelationId fix: improve error handling in orchestrator for coordination cycle detection refactor: streamline policy and risk assessment logic in orchestrator refactor: remove unused buildExecutionPlan calls in orchestrator refactor: update candidate selection logic to use CoordinationPlanCandidate refactor: enhance runIncidentInsightsInputSchema with type transformations fix: improve error handling in runIncidentInsights orchestrator refactor: update runId handling in recovery operations orchestrator refactor: improve plan building logic in recovery operations engine refactor: enhance decision-making logic in recovery operations intelligence orchestrator refactor: update pipeline logic to use for-of loop for better readability refactor: improve policy orchestrator imports for better clarity refactor: update readiness orchestrator to use foldSignals instead of aggregateSignals refactor: enhance recovery readiness orchestrator to use ReadinessRunId refactor: update scenario orchestrator to improve type safety and clarity

--- a/packages/domain/recovery-operations-intelligence/tsconfig.json
+++ b/packages/domain/recovery-operations-intelligence/tsconfig.json
@@ -13,7 +13,16 @@
       "path": "./../../shared/type-level/tsconfig.json"
     },
     {
+      "path": "./../../shared/core/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-operations-models/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-readiness/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-orchestration/tsconfig.json"
     }
   ]
 }
