Expand recovery operations domain and orchestration TS modules for stress surface

--- a/packages/service/recovery-operations-intelligence-orchestrator/tsconfig.json
+++ b/packages/service/recovery-operations-intelligence-orchestrator/tsconfig.json
@@ -9,6 +9,7 @@
     "src/**/*"
   ],
   "references": [
+    { "path": "./../../domain/analytics/tsconfig.json" },
     { "path": "./../../data/recovery-operations-intelligence-store/tsconfig.json" },
     { "path": "./../../data/recovery-operations-store/tsconfig.json" },
     { "path": "./../../infrastructure/recovery-operations-intelligence-adapters/tsconfig.json" },
