--- a/packages/domain/recovery-operations-models/tsconfig.json
+++ b/packages/domain/recovery-operations-models/tsconfig.json
@@ -9,6 +9,7 @@
     "src/**/*"
   ],
   "references": [
+    { "path": "./../../domain/recovery-readiness/tsconfig.json" },
     {
       "path": "./../../shared/type-level/tsconfig.json"
     },
