--- a/packages/service/recovery-operations-intelligence-orchestrator/package.json
+++ b/packages/service/recovery-operations-intelligence-orchestrator/package.json
@@ -14,6 +14,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@domain/analytics": "workspace:*",
     "@data/recovery-operations-intelligence-store": "workspace:*",
     "@data/recovery-operations-store": "workspace:*",
     "@infrastructure/recovery-operations-intelligence-adapters": "workspace:*",
