feat(recovery): expand operations engine and policy service stress surface

--- a/packages/service/recovery-operations-engine/tsconfig.json
+++ b/packages/service/recovery-operations-engine/tsconfig.json
@@ -18,6 +18,7 @@
     { "path": "./../../infrastructure/recovery-operations-compliance/tsconfig.json" },
     { "path": "./../../service/recovery-operations-policy-engine/tsconfig.json" },
     { "path": "./../../service/recovery-operations-intelligence-orchestrator/tsconfig.json" },
-    { "path": "./../../data/recovery-operations-intelligence-store/tsconfig.json" }
+    { "path": "./../../data/recovery-operations-intelligence-store/tsconfig.json" },
+    { "path": "./../../data/recovery-operations-analytics/tsconfig.json" }
   ]
 }
