--- a/packages/service/recovery-operations-engine/package.json
+++ b/packages/service/recovery-operations-engine/package.json
@@ -22,6 +22,7 @@
     "@service/recovery-operations-policy-engine": "workspace:*",
     "@data/recovery-operations-governance-store": "workspace:*",
     "@infrastructure/recovery-operations-compliance": "workspace:*",
+    "@data/recovery-operations-analytics": "workspace:*",
     "@service/recovery-operations-intelligence-orchestrator": "workspace:*",
     "@data/recovery-operations-intelligence-store": "workspace:*",
     "zod": "^3.24.0"
