--- a/packages/data/telemetry-store/package.json
+++ b/packages/data/telemetry-store/package.json
@@ -17,6 +17,7 @@
     "@domain/telemetry-models": "workspace:*",
     "@data/repositories": "workspace:*",
     "@shared/core": "workspace:*",
+    "zod": "^3.24.0",
     "@aws-sdk/client-s3": "^3.900.0"
   }
 }
