--- a/packages/domain/continuity-orchestration/tsconfig.json
+++ b/packages/domain/continuity-orchestration/tsconfig.json
@@ -13,6 +13,9 @@
       "path": "./../../shared/core/tsconfig.json"
     },
     {
+      "path": "./../../shared/result/tsconfig.json"
+    },
+    {
       "path": "./../../shared/type-level/tsconfig.json"
     }
   ]
