--- a/packages/service/recovery-scenario-orchestrator/tsconfig.json
+++ b/packages/service/recovery-scenario-orchestrator/tsconfig.json
@@ -26,6 +26,9 @@
     },
     {
       "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
+      "path": "./../../platform/logging/tsconfig.json"
     }
   ]
 }
