--- a/packages/data/incident-forecast-store/package.json
+++ b/packages/data/incident-forecast-store/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@domain/incident-forecasting": "workspace:*",
     "@shared/result": "workspace:*",
-    "@shared/util": "workspace:*"
+    "@shared/util": "workspace:*",
+    "zod": "^3.24.0"
   }
 }
