--- a/packages/data/recovery-operations-store/package.json
+++ b/packages/data/recovery-operations-store/package.json
@@ -17,6 +17,7 @@
     "@domain/recovery-operations-models": "workspace:*",
     "@shared/result": "workspace:*",
     "@aws-sdk/client-dynamodb": "^3.900.0",
+    "@aws-sdk/util-dynamodb": "^3.900.0",
     "zod": "^3.24.0"
   }
 }
