--- a/packages/domain/identity/package.json
+++ b/packages/domain/identity/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@shared/core": "workspace:*",
     "@shared/validation": "workspace:*",
-    "@shared/protocol": "workspace:*"
+    "@shared/protocol": "workspace:*",
+    "zod": "^3.24.0"
   }
 }
