--- a/packages/domain/operations-orchestration/tsconfig.json
+++ b/packages/domain/operations-orchestration/tsconfig.json
@@ -13,6 +13,12 @@
       "path": "./../../shared/core/tsconfig.json"
     },
     {
+      "path": "./../../data/query-models/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/result/tsconfig.json"
+    },
+    {
       "path": "./../../shared/type-level/tsconfig.json"
     }
   ]
