--- a/packages/service/decision-mesh/package.json
+++ b/packages/service/decision-mesh/package.json
@@ -22,6 +22,7 @@
     "@shared/result": "workspace:*",
     "@shared/type-level": "workspace:*",
     "@aws-sdk/client-eventbridge": "^3.900.0",
+    "@aws-sdk/client-s3": "^3.900.0",
     "zod": "^3.24.0"
   }
 }
