--- a/packages/domain/recovery-operations-intelligence/tsconfig.json
+++ b/packages/domain/recovery-operations-intelligence/tsconfig.json
@@ -23,6 +23,9 @@
     },
     {
       "path": "./../../domain/recovery-orchestration/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-operations-governance/tsconfig.json"
     }
   ]
 }
