--- a/packages/infrastructure/recovery-operations-intelligence-adapters/package.json
+++ b/packages/infrastructure/recovery-operations-intelligence-adapters/package.json
@@ -17,6 +17,8 @@
     "@aws-sdk/client-sqs": "^3.900.0",
     "@data/recovery-operations-intelligence-store": "workspace:*",
     "@domain/recovery-operations-intelligence": "workspace:*",
+    "@domain/recovery-playbooks": "workspace:*",
+    "@data/recovery-playbook-store": "workspace:*",
     "@shared/result": "workspace:*",
     "zod": "^3.24.0"
   }
