--- a/packages/service/recovery-operations-intelligence-orchestrator/package.json
+++ b/packages/service/recovery-operations-intelligence-orchestrator/package.json
@@ -23,6 +23,8 @@
     "@service/recovery-operations-policy-engine": "workspace:*",
     "@domain/recovery-operations-intelligence": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
+    "@domain/recovery-playbooks": "workspace:*",
+    "@data/recovery-playbook-store": "workspace:*",
     "@shared/result": "workspace:*",
     "@shared/core": "workspace:*",
     "zod": "^3.24.0"
