Expand recovery orchestration model and engine layers

--- a/packages/domain/recovery-operations-models/tsconfig.json
+++ b/packages/domain/recovery-operations-models/tsconfig.json
@@ -10,6 +10,7 @@
   ],
   "references": [
     { "path": "./../../domain/recovery-readiness/tsconfig.json" },
+    { "path": "./../../shared/core/tsconfig.json" },
     {
       "path": "./../../shared/type-level/tsconfig.json"
     },
