--- a/packages/domain/recovery-operations-models/package.json
+++ b/packages/domain/recovery-operations-models/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@shared/type-level": "workspace:*",
+    "@shared/core": "workspace:*",
     "@domain/recovery-orchestration": "workspace:*",
     "zod": "^3.24.0"
   }
