--- a/packages/service/recovery-operations-engine/tsconfig.json
+++ b/packages/service/recovery-operations-engine/tsconfig.json
@@ -21,6 +21,9 @@
     { "path": "./../../data/recovery-operations-intelligence-store/tsconfig.json" },
     { "path": "./../../data/recovery-operations-analytics/tsconfig.json" },
     { "path": "./../../domain/recovery-operations-cadence/tsconfig.json" },
-    { "path": "./../../infrastructure/recovery-operations-cadence-bridge/tsconfig.json" }
+    { "path": "./../../infrastructure/recovery-operations-cadence-bridge/tsconfig.json" },
+    { "path": "./../../domain/recovery-operations-control-plane/tsconfig.json" },
+    { "path": "./../../data/recovery-operations-control-plane-store/tsconfig.json" },
+    { "path": "./../../shared/result/tsconfig.json" }
   ]
 }
