feat: update interfaces and types in nebula-hyper and nebula-hyper-c, refine tsconfig includes, and enhance fulfillment orchestrator error handling

--- a/packages/domain/recovery-operations-control-plane/package.json
+++ b/packages/domain/recovery-operations-control-plane/package.json
@@ -17,6 +17,6 @@
     "@domain/recovery-orchestration": "workspace:*",
     "@domain/recovery-operations-models": "workspace:*",
     "@shared/core": "workspace:*",
-    "@shared/type-level": "workspace:*",
+    "@shared/type-level": "workspace:*"
   }
 }
