feat: add recovery incident orchestration domain, data, service, and dashboard app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -573,6 +573,18 @@
     },
     {
       "path": "./packages/service/recovery-risk-orchestrator"
+    },
+    {
+      "path": "./packages/domain/recovery-incident-orchestration"
+    },
+    {
+      "path": "./packages/data/recovery-incident-store"
+    },
+    {
+      "path": "./packages/service/recovery-incident-orchestrator"
+    },
+    {
+      "path": "./packages/app/recovery-incident-dashboard"
     }
   ]
 }
